# StreamDeck

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  action.cpp  action.h  brightnessaction.cpp  brightnessaction.h  configuration.cpp  configuration.h  configurationhandler.cpp  configurationhandler.h  deckbutton.cpp  deckbutton.h  deckhandler.cpp  deckhandler.h  imageselectiondialog.cpp  imageselectiondialog.h  main.cpp  mainwindow.cpp  mainwindow.h  previouspageaction.h  resources.qrc  streamdeck.cpp  streamdeck.h  streamdeckinterface.h
actions/: action.cpp  action.h  brightnessaction.cpp  nextpageaction.cpp  nextpageaction.h  previouspageaction.cpp  previouspageaction.h
gui/: deckbutton.cpp  deckbutton.h  imageselectiondialog.cpp  mainwindow.cpp  mainwindow.h
